Update Collection structure for project-service
